@@ -1,255 +1,0 @@
-##########################################################
-# Do not touch this file.                                #
-# It has been generated from the informations present    #
-# in the archetype files.                                #
-# To add new entries, simply add                         #
-#     smoothface xxx yyy                                 #
-# to an archetype and collect.pl will put below an entry #
-#      xxx yyy                                           #
-##########################################################
-
-# default smooth. Needed for fallbacking
-default_smoothed.111 sdefault.001
-
-# Data extracted from arch files
-beach.111 beach_S.111
-beige-cyan-c-marble.111 empty_S.111
-beige-cyan-c-marble.112 empty_S.111
-beige-cyan-c-marble.113 empty_S.111
-beige-cyan-c-marble.114 empty_S.111
-beige-green-c-marble.111 empty_S.111
-beige-green-c-marble.112 empty_S.111
-beige-green-c-marble.113 empty_S.111
-beige-green-c-marble.114 empty_S.111
-beige-pink-c-marble.111 empty_S.111
-beige-pink-c-marble.112 empty_S.111
-beige-pink-c-marble.113 empty_S.111
-beige-pink-c-marble.114 empty_S.111
-beige-white-c-marble.111 empty_S.111
-beige-white-c-marble.112 empty_S.111
-beige-white-c-marble.113 empty_S.111
-beige-white-c-marble.114 empty_S.111
-beigemarble.111 empty_S.111
-blackmarble.111 empty_S.111
-blackrock.111 blackrock_S.111
-blake_0.111 empty_S.111
-blake_1.111 empty_S.111
-blake_2.111 empty_S.111
-blake_3.111 empty_S.111
-blake_4.111 empty_S.111
-blake_5.111 empty_S.111
-blake_6.111 empty_S.111
-blake_7.111 empty_S.111
-blake_8.111 empty_S.111
-blake_9.111 empty_S.111
-blake_A.111 empty_S.111
-blake_B.111 empty_S.111
-blake_C.111 empty_S.111
-blake_D.111 empty_S.111
-blake_E.111 empty_S.111
-blake_F.111 empty_S.111
-blood_sea.111 blood_sea_S.111
-blood_sea.112 blood_sea_S.112
-blood_sea.113 blood_sea_S.113
-blood_sea.114 blood_sea_S.114
-bluemarble.111 empty_S.111
-bluemarblemedium.111 empty_S.111
-brush.111 grass_S.111
-cmarsh.111 empty_S.111
-cobblesto1.111 empty_S.111
-cobblesto2.111 empty_S.111
-crater.111 empty_S.111
-cyan-beige-c-marble.111 empty_S.111
-cyan-beige-c-marble.112 empty_S.111
-cyan-beige-c-marble.113 empty_S.111
-cyan-beige-c-marble.114 empty_S.111
-cyanbrush.111 cyangrass_S.111
-cyangrass.111 cyangrass_S.111
-cyangrasspond.111 cyangrass_S.111
-cyanmarble.111 empty_S.111
-darkforest.111 darkforest_S.111
-dcross-red.111 empty_S.111
-dcross-white.111 empty_S.111
-deep_sea.111 deep_sea_S.111
-deep_sea.112 deep_sea_S.112
-deep_sea.113 deep_sea_S.113
-deep_sea.114 deep_sea_S.114
-deep_swamp.111 deep_swamp_S.111
-deep_swamp.112 deep_swamp_S.112
-desert.111 desert_S.111
-dirtfloor.111 empty_S.111
-drifts.111 empty_S.111
-dunes.111 dunes_S.111
-earth.111 empty_S.111
-evergreens.111 evergreens_S.111
-evergreens_2.111 empty_S.111
-farmland.111 empty_S.111
-fcross-blue.111 empty_S.111
-fcross-white.111 empty_S.111
-fireball.111 fireball_S.111
-fireball.112 fireball_S.112
-fireball.113 fireball_S.113
-flagstone.111 flagstone_S.111
-footpath_0.111 grass_S.111
-footpath_1.111 grass_S.111
-footpath_2.111 grass_S.111
-footpath_3.111 grass_S.111
-footpath_4.111 grass_S.111
-footpath_5.111 grass_S.111
-footpath_6.111 grass_S.111
-footpath_7.111 grass_S.111
-footpath_8.111 grass_S.111
-footpath_9.111 grass_S.111
-footpath_A.111 grass_S.111
-footpath_B.111 grass_S.111
-footpath_C.111 grass_S.111
-footpath_D.111 grass_S.111
-footpath_E.111 grass_S.111
-footpath_F.111 grass_S.111
-glacier.111 empty_S.111
-grass.111 grass_S.111
-grass_br_gr.111 empty_S.111
-grassbrown.111 empty_S.111
-grassdark.111 empty_S.111
-grassmedium.111 empty_S.111
-grasspond.111 grass_S.111
-gray-white-h-marble.111 empty_S.111
-gray-white-h-marble.112 empty_S.111
-graymarble.111 empty_S.111
-green-beige-c-marble.111 empty_S.111
-green-beige-c-marble.112 empty_S.111
-green-beige-c-marble.113 empty_S.111
-green-beige-c-marble.114 empty_S.111
-green-white-c-marble.111 empty_S.111
-green-white-c-marble.112 empty_S.111
-green-white-c-marble.113 empty_S.111
-green-white-c-marble.114 empty_S.111
-green-white-h-marble.111 empty_S.111
-green-white-h-marble.112 empty_S.111
-greenmarble.111 empty_S.111
-greenmarblelight.111 empty_S.111
-greenmarblemedium.111 empty_S.111
-hills.111 hills_S.111
-hillsrocky.111 hillsrocky_S.111
-hole1.111 grass_S.111
-ice.111 empty_S.111
-ipond.111 empty_S.111
-jungle_1.111 jungle_S.111
-jungle_2.111 jungle_S.111
-largestone.111 empty_S.111
-lava.111 lava_S.111
-lava.112 lava_S.112
-lava.113 lava_S.113
-lava.114 lava_S.114
-lava.115 lava_S.115
-lightgreenmarble.111 empty_S.111
-lightmagent-green-p-marble.111 empty_S.111
-lightmagent-green-p-marble.112 empty_S.111
-lightmagent-green-p-marble.113 empty_S.111
-lightmagent-green-p-marble.114 empty_S.111
-lightmagent-green-p-marble.121 empty_S.111
-lightmagent-green-p-marble.122 empty_S.111
-lightmagent-green-p-marble.123 empty_S.111
-lightmagent-green-p-marble.124 empty_S.111
-lightmagentamarble.111 empty_S.111
-magentamarble.111 empty_S.111
-magentamarblemedium.111 empty_S.111
-marble.111 empty_S.111
-marble_blgr.111 empty_S.111
-marsh.111 marsh_S.111
-mediumston.111 empty_S.111
-moun_cave1.111 mountain_S.111
-moun_cave2.111 mountain_S.111
-mountain1.111 mountain_S.111
-mountain2.111 mountain_S.111
-mountain4.111 mountain_S.111
-mountain5.111 mountain_S.111
-oil_sea.111 oil_sea_S.111
-oil_sea.112 oil_sea_S.112
-oil_sea.113 oil_sea_S.113
-oil_sea.114 oil_sea_S.114
-pink-beige-c-marble.111 empty_S.111
-pink-beige-c-marble.112 empty_S.111
-pink-beige-c-marble.113 empty_S.111
-pink-beige-c-marble.114 empty_S.111
-pinkmarble.111 empty_S.111
-pstone_1.111 pstone_1_S.111
-pstone_2.111 pstone_1_S.111
-pstone_3.111 pstone_1_S.111
-quicksilver_sea.111 quicksilver_sea_S.111
-quicksilver_sea.112 quicksilver_sea_S.112
-quicksilver_sea.113 quicksilver_sea_S.113
-quicksilver_sea.114 quicksilver_sea_S.114
-redmarble.111 empty_S.111
-sea.111 sea_S.111
-sea.112 sea_S.112
-sea.113 sea_S.113
-sea.114 sea_S.114
-sea_7.111 empty_S.111
-sea_B.111 empty_S.111
-sea_D.111 empty_S.111
-sea_E.111 empty_S.111
-shallow_sea.111 shallow_sea_S.111
-shallow_sea.112 shallow_sea_S.112
-shallow_sea.113 shallow_sea_S.113
-shallow_sea.114 shallow_sea_S.114
-slate_b.111 empty_S.111
-slate_r.111 empty_S.111
-slate_w.111 empty_S.111
-smallstone.111 empty_S.111
-snow.111 empty_S.111
-snow2.111 empty_S.111
-snow3.111 empty_S.111
-snow4.111 empty_S.111
-snow5.111 snow5_S.111
-steppe.111 steppe_S.111
-stfloor.111 empty_S.111
-swamp.111 swamp_S.111
-tree_1.111 sgrass_S.111
-tree_2.111 sgrass_S.111
-treed_hills.111 hills_S.111
-wasteland.111 wasteland_S.111
-white-beige-c-marble.111 empty_S.111
-white-beige-c-marble.112 empty_S.111
-white-beige-c-marble.113 empty_S.111
-white-beige-c-marble.114 empty_S.111
-white-gray-h-marble.111 empty_S.111
-white-gray-h-marble.112 empty_S.111
-white-gray-x-marble.111 empty_S.111
-white-gray-x-marble.112 empty_S.111
-white-gray-x-marble.113 empty_S.111
-white-gray-x-marble.114 empty_S.111
-white-gray-x-marble.115 empty_S.111
-white-gray-x-marble.116 empty_S.111
-white-gray-x-marble.117 empty_S.111
-white-gray-x-marble.118 empty_S.111
-white-gray-x-marble.119 empty_S.111
-white-green-c-marble.111 empty_S.111
-white-green-c-marble.112 empty_S.111
-white-green-c-marble.113 empty_S.111
-white-green-c-marble.114 empty_S.111
-white-green-h-marble.111 empty_S.111
-white-green-h-marble.112 empty_S.111
-white-green-x-marble.111 empty_S.111
-white-green-x-marble.112 empty_S.111
-white-green-x-marble.113 empty_S.111
-white-green-x-marble.114 empty_S.111
-white-green-x-marble.115 empty_S.111
-white-green-x-marble.116 empty_S.111
-white-green-x-marble.117 empty_S.111
-white-green-x-marble.118 empty_S.111
-white-green-x-marble.119 empty_S.111
-white-pink-c-marble.111 empty_S.111
-white-pink-c-marble.112 empty_S.111
-white-pink-c-marble.113 empty_S.111
-white-pink-c-marble.114 empty_S.111
-white-red-c-marble.111 empty_S.111
-white-red-c-marble.112 empty_S.111
-white-red-c-marble.113 empty_S.111
-white-red-c-marble.114 empty_S.111
-woodfloor.111 empty_S.111
-woodfloor2.111 empty_S.111
-woodlarge.111 empty_S.111
-woods_1.111 sgrass_S.111
-woods_2.111 woods_2_S.111
-woods_3.111 sgrass_S.111
